force-app/main/default/objects/ssot__MealCardActivity__dlm/fields/ssot__LocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LocationId__c</fullName>
    <label>Location Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>