force-app/main/default/objects/ssot__MealCardActivity__dlm/fields/ssot__MealCardBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MealCardBalanceAmount__c</fullName>
    <label>Meal Card Balance</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MealCardBalanceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>