force-app/main/default/objects/ssot__MealCardActivity__dlm/fields/ssot__rel_1731039797887_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039797887_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MealCardActivity_AcademicTermId_map__rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>MealCardActivity_AcademicTermId_map__rel</relationshipLabel>
    <relationshipName>rel_1731039797887_end</relationshipName>
    <type>Lookup</type>
</CustomField>