force-app/main/default/objects/ssot__MealCardActivity__dlm/fields/ssot__rel_1731040471595_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040471595_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MealCardActivity_LocationId_map_Loca_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>MealCardActivity_LocationId_map_Loca_rel</relationshipLabel>
    <relationshipName>rel_1731040471595_end</relationshipName>
    <type>Lookup</type>
</CustomField>