force-app/main/default/objects/ssot__MealCardActivity__dlm/fields/ssot__rel_1731040482373_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040482373_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MealCardActivity_IndividualId_map_In_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>MealCardActivity_IndividualId_map_In_rel</relationshipLabel>
    <relationshipName>rel_1731040482373_end</relationshipName>
    <type>Lookup</type>
</CustomField>