force-app/main/default/objects/ssot__MealCardActivity__dlm/fields/ssot__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionType__c</fullName>
    <label>Transaction Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>